k8s/prod/octoprint-events.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint-events
spec:
  replicas: 1
  selector:
    matchLabels:
      app: octoprint-events
  template:
    metadata:
      labels:
        app: octoprint-events
    spec:
      serviceAccountName: webapp
      containers:
      - name: octoprint-events
        imagePullPolicy: Always
        command:
          - python
          - /app/print_nanny_webapp/telemetry/subscribers/octoprint_events.py
        image: us.gcr.io/print-nanny/print_nanny_webapp:latest
        ports:
        - containerPort: 8000
        - containerPort: 8001
        volumeMounts:
        - name: webapp-service-account
          mountPath: /etc/service-account
          readOnly: true
      # - name: alerts
      #   imagePullPolicy: Always
      #   command:
      #     - python
      #     - /app/print_nanny_webapp/alerts/subscribers/alerts.py

      #   image: us.gcr.io/print-nanny/print_nanny_webapp:latest
      #   envFrom:
      #     - configMapRef:
      #         name: webapp
      #   env:
      #     - name: HONEYCOMB_SERVICE_NAME
      #       value: octoprint-events
      #   volumeMounts:
      #   - name: webapp-service-account
      #     mountPath: /etc/service-account
      #     readOnly: true
      - name: cloud-sql-proxy
        # It is recommended to use the latest version of the Cloud SQL proxy
        # Make sure to update on a regular schedule!
        image: gcr.io/cloudsql-docker/gce-proxy:1.17
        command:
          - "/cloud_sql_proxy"

          # If connecting from a VPC-native GKE cluster, you can use the
          # following flag to have the proxy connect over private IP
          # - "-ip_address_types=PRIVATE"

          # Replace DB_PORT with the port the proxy should listen on
          # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
          - "-instances=print-nanny:us-central1:print-nanny=tcp:5432"
        securityContext:
          # The default Cloud SQL proxy image runs as the
          # "nonroot" user and group (uid: 65532) by default.
          runAsNonRoot: true
        ports:
          - containerPort: 5432
      volumes:
        - name: webapp-service-account
          secret:
            secretName: webapp-service-account
