k8s/prod/ghost-blog.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
  name: print-nanny-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: print-nanny-blog
  serviceName: print-nanny-blog
  template:
    metadata:
      labels:
        app: print-nanny-blog
    spec:
      serviceAccountName: ghost-site
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx # mount nginx-conf volumn to /etc/nginx
          readOnly: true
          name: nginx-conf
        - mountPath: /var/log/nginx
          name: log
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.17
        command:
          - "/cloud_sql_proxy"
          - "-instances=print-nanny:us-central1:print-nanny-blog=tcp:3306"
        securityContext:
          runAsNonRoot: true
        ports:
          - containerPort: 3306
      - image: ghost:alpine
        name: ghost
        ports:
        - containerPort: 2368
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: print-nanny-blog-data
        livenessProbe:
          httpGet:
            path: /
            port: 2368
            httpHeaders:
              - name: X-Forwarded-Proto
                value: https
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 4
        readinessProbe:
          httpGet:
            path: /
            port: 2368
            httpHeaders:
              - name: X-Forwarded-Proto
                value: https
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 6
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
          items:
            - key: nginx.conf
              path: nginx.conf
            - key: virtualhost.conf
              path: virtualhost/virtualhost.conf # dig directory
      - name: log
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: print-nanny-blog-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: print-nanny-blog
  labels:
    app: print-nanny-blog
  annotations:
    cloud.google.com/backend-config: '{"default": "print-nanny-blog"}'
spec:
  selector:
    app: print-nanny-blog
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: print-nanny-blog
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
    kubernetes.io/ingress.global-static-ip-name: ghost-blog-static-ip
    networking.gke.io/managed-certificates: print-nanny-blog
spec:
  defaultBackend:
    service:
      name: print-nanny-blog
      port: 80
