k8s/prod/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: printnanny-global
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
    kubernetes.io/ingress.global-static-ip-name: "django-static-ip"
    networking.gke.io/managed-certificates: print-nanny-dot-com
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-snippet: |
        if ( $host = "www.print-nanny.com" ) {
          rewrite ^/(.*)$ https://www.printnanny.ai/$1 permanent;
          return 301 https://www.printnanny.ai;
        }
spec:
  rules:
    # www and api
    - host: print-nanny.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django
                port:
                  number: 80
    - host: www.print-nanny.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django
                port:
                  number: 80
    - host: api.print-nanny.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django
                port:
                  number: 80
    - host: help.print-nanny.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: print-nanny-help
                port:
                  number: 80
    - host: blog.print-nanny.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: print-nanny-blog
                port:
                  number: 80
    - host: metabase.print-nanny.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metabase
                port:
                  number: 80
